--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "eleventy --serve"
+      "watch:sass": "sass  --no-source-map --watch src/sass:dist/css",
+      "watch:eleventy": "eleventy --serve",
+      "build:sass": "sass  --no-source-map src/sass:dist/css",
+      "build:eleventy": "eleventy",
+      "start": "npm-run-all build:sass --parallel watch:*",
+      "build": "npm-run-all build:sass build:eleventy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.2"
+      "@11ty/eleventy": "^1.0.2",
+      "@11ty/eleventy-img": "^2.0.1",
+      "npm-run-all": "^4.1.5",
+      "sass": "^1.55.0"
   }
 }
